<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res/com.dengdeng123.blowupplane"
    android:layout_width="match_parent"
    android:layout_height="400dip"
    android:background="@drawable/pause_bg" >

    <com.dengdeng123.blowupplane.widget.TextViewPlus
        android:id="@+id/menu_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/title_img"
        android:gravity="center"
        android:paddingLeft="@dimen/border_default"
        android:paddingRight="@dimen/border_default"
        android:text="@string/menu"
        android:textColor="@android:color/white"
        android:textSize="@dimen/default_txt_size"
        foo:customFont="yansong.otf" />

    <com.dengdeng123.blowupplane.widget.TextViewPlus
        android:id="@+id/paly_help_txtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/store_btn_bg_2"
        android:contentDescription="@null"
        android:gravity="center"
        android:text="@string/paly_help"
        android:textColor="@android:color/white"
        android:textSize="@dimen/default_txt_size"
        foo:customFont="yansong.otf" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paly_help_txtv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" >

        <com.dengdeng123.blowupplane.widget.TextViewPlus
            android:id="@+id/back_to_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dip"
            android:background="@drawable/store_btn_bg_2"
            android:contentDescription="@null"
            android:gravity="center"
            android:text="@string/back_to_game"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_txt_size"
            foo:customFont="yansong.otf" />

        <com.dengdeng123.blowupplane.widget.TextViewPlus
            android:id="@+id/back_to_last_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/store_btn_bg_2"
            android:contentDescription="@null"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_txt_size"
            foo:customFont="yansong.otf" />
    </LinearLayout>

</RelativeLayout>